--- a/WebContent/exercices_goldrei.html
+++ b/WebContent/exercices_goldrei.html
@@ -621,7 +621,7 @@
   <br />&not;(p&rarr;q)&#8866;&not;q
   <br />Donc &Gamma;&#8866;&not;q, c&#39;est-à-dire que &Gamma; est inconsistant &#8718;.</div></div>
   <h3>Théorème 3.6</h3>Montrer que pour tout ensemble &Gamma; et tout formule &phi;, &Gamma;,&not;&phi; est consistant si et
-  seulement si &Gamma;
+  seulement si &Gamma;&#8876;&phi;.
   <h3>Exercice 3.18</h3>
   <h4>a) 2e partie de la preuve du théorème 3.6</h4>
   <div class="paragraph_body">Montrer que si &Gamma;&#8866;&phi; alors &Gamma;,&not;&phi; est inconsistant.
@@ -641,6 +641,11 @@
   <br />Donc &Gamma;,&phi; est consistant &#8718;.</div>
   <h3>Exercice 3.19</h3>
   <h4>Montrer que les deux assertions suivantes sont équivalentes :</h4>
+  a) Pour tout ensemble de formules &Gamma; et
+      toute formule &phi;, si &Gamma;&#8872;&phi; alors &Gamma;&#8866;&phi;.
+  <br/> 
+  b) Pour tout ensemble de formules &Delta;, si &Delta; est
+      consistant alors il est satisfaisable.
   <h3>Exercice 3.20</h3>
   <h4>Déterminez quels ensembles sont consistants parmi les suivants et expliquez pourquoi.</h4>
   <h4>a) (p&rarr;q),(q&rarr;r),(r&rarr;&not;p)</h4>
