--- a/WebContent/notes_goldrei.html
+++ b/WebContent/notes_goldrei.html
@@ -561,7 +561,11 @@
 	  Donc v(&psi;)=T et v(&theta;)=F.
 	  <br/>Donc P<sub>1</sub>,...,P<sub>n</sub>&#8866;&psi; et P<sub>1</sub>,...,P<sub>n</sub>&#8866;&not;&theta; (hypothèse d'induction)
 	  <br/> Or (selon exercice 3.10b) &psi;,&not;&theta;&#8866;&not;(&psi;&rarr;&theta;)=&not;&phi; et donc P<sub>1</sub>,...,P<sub>n</sub>&#8866;&not;&phi;&#8718;.
-		<br/>
+	<br/>
+	Montrer que si pour toute formule &phi;, si &#8872;&phi; alors &#8866;&phi;, 
+	on a aussi pour toute formule &phi;, si &Gamma;&#8872;&phi; alors &Gamma;&#8866;&phi;.
+	<br/>
+	Si &Gamma;&#8872;&phi; alors &#8872;&Gamma;&rarr;&phi;, et donc &#8866;&Gamma;&rarr;&phi;, et donc &Gamma;&#8866;&phi;.
 	  
    </body>
 </html>
